[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "liquidpy"
version = "0.7.2"
description = "A port of liquid template engine for python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/liquidpy"
repository = "https://github.com/pwwang/liquidpy"

[[tool.poetry.packages]]
include = "liquid"

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^3"
python-frontmatter = {version = "^1.0.0", optional = true}
markdown = {version = "^3.3.4", optional = true}
regex = {version = "^2021.10.8", optional = true}
python-slugify = {version = "^5.0.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=liquid --cov-report xml:cov.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
