[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "liquidpy"
version = "0.7.6"
description = "A port of liquid template engine for python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/liquidpy"
repository = "https://github.com/pwwang/liquidpy"

[[tool.poetry.packages]]
include = "liquid"

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^3"
python-frontmatter = {version = "^1.0", optional = true}
markdown = {version = "^3.3", optional = true}
regex = {version = "^2022.4", optional = true}
python-slugify = {version = "^6.1", optional = true}
python-dateutil = {version = "^2.8", optional = true}
# needed by python-frontmatter
toml = {version = "^0.10.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
six = "^1.16.0"

[tool.poetry.extras]
extra = ["python-frontmatter", "markdown", "regex", "python-slugify", "python-dateutil", "toml"]

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov-config=.coveragerc --cov=liquid --cov-report xml:cov.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
