[build-system]
requires = [ "poetry>=1.0.0",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "liquidpy"
version = "0.8.4"
description = "A port of liquid template engine for python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/liquidpy"
repository = "https://github.com/pwwang/liquidpy"

[tool.poetry.build]
generate-setup-file = true

[[tool.poetry.packages]]
include = "liquid"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^3"
python-frontmatter = {version = "^1.0", optional = true}
markdown = [
    {version = "^3.4", optional = true, python = "<3.8"},
    {version = "^3.5", optional = true, python = ">=3.8"},
]
regex = [
    {version = "^2023.12", optional = true, python = "<3.8"},
    {version = "^2024.11", optional = true, python = ">=3.8"},
]
python-slugify = {version = "^8", optional = true}
python-dateutil = {version = "^2.8", optional = true}
# needed by python-frontmatter
toml = {version = "^0.10", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
six = "^1.17"

[tool.poetry.extras]
extra = ["python-frontmatter", "markdown", "regex", "python-slugify", "python-dateutil", "toml"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov-config=.coveragerc --cov=liquid --cov-report xml:cov.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false
